--- a/vehicles/delorean.html
+++ b/vehicles/delorean.html
@@ -62,7 +62,7 @@
             </section>
             
             <section class="section">
-                <div class="tabs">
+                <div class="tabs card">
                     <div class="tab-buttons">
                         <button class="tab-btn active">Specifications</button>
                         <button class="tab-btn">History</button>
@@ -77,4 +77,81 @@
                                 <td>PRV (Peugeot-Renault-Volvo) ZMJ-159 2.85L V6</td>
                             </tr>
                             <tr>
-                                <td><strong>Power:</strong></t
+                                <td><strong>Power:</strong></td>
+                                <td>130 hp (97 kW) @ 5500 rpm</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Torque:</strong></td>
+                                <td>153 lb⋅ft (207 N⋅m) @ 2750 rpm</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Transmission:</strong></td>
+                                <td>5-speed manual or 3-speed automatic</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Wheelbase:</strong></td>
+                                <td>2,413 mm (95.0 in)</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Length:</strong></td>
+                                <td>4,267 mm (168.0 in)</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Width:</strong></td>
+                                <td>1,988 mm (78.3 in)</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Height:</strong></td>
+                                <td>1,140 mm (44.9 in) doors closed</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Curb weight:</strong></td>
+                                <td>1,233 kg (2,718 lb)</td>
+                            </tr>
+                            <tr>
+                                <td><strong>0-60 mph:</strong></td>
+                                <td>8.8 seconds</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Top speed:</strong></td>
+                                <td>130 mph (209 km/h)</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </section>
+            
+            <section class="section">
+                <h2>Recommended Upgrades</h2>
+                <div class="upgrade-grid">
+                    <div class="upgrade-item">
+                        <img src="../images/upgrades/flux-cap.png" alt="Flux Capacitor">
+                        <a href="#">Flux Capacitor</a>
+                        <p>$1,200.99</p>
+                    </div>
+                    <div class="upgrade-item">
+                        <img src="../images/upgrades/flame.jpg" alt="Flame Decals">
+                        <a href="#">Flame Decals</a>
+                        <p>$150.99</p>
+                    </div>
+                    <div class="upgrade-item">
+                        <img src="../images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
+                        <a href="#">Bumper Stickers</a>
+                        <p>$19.99</p>
+                    </div>
+                    <div class="upgrade-item">
+                        <img src="../images/upgrades/hub-cap.jpg" alt="Hub Caps">
+                        <a href="#">Hub Caps</a>
+                        <p>$79.99 each</p>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <p>&copy; PHP Motors, All rights reserved.</p>
+            <p>All images used are believed to be in "Fair Use". Please notify the author if any are not and they will be removed.</p>
+            <p>Last Updated: <span id="last-updated">8 May 2025</span></p>
+        </footer>
+    </div>
+</body>
+</html>
